# Sentiment-Analysis-App

./: .gitignore  README.md
backend/: config.py  helper.py  main.py  pyproject.toml  vercel.json
backend/ai_models/: model.pkl  vectorizer.pkl
frontend/: components.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: base.ts
frontend/src/components/: Shuffle.tsx  alert.tsx  chatgpt-prompt-input.tsx
frontend/src/components/ui/: loader-10.tsx
