[project]
name = "Sentiment_Analysis"
version = "1.0.0"
description = "API service for Sentiment Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.48.0",
]
